Bugfix: modal close button is being clipped

--- a/parent/device-registry/src/main/webapp/public/index.css
+++ b/parent/device-registry/src/main/webapp/public/index.css
@@ -59,6 +59,10 @@ input, textarea, select, .form-control{
 	width: auto;
 	max-width: none;
 	padding: 0;
+	overflow: visible;
+}
+.modal a.close-modal{
+	z-index: 3;
 }
 .modal-content{
 	margin-bottom: 0;
